--- a/programs/shaft-design-project.html
+++ b/programs/shaft-design-project.html
@@ -292,7 +292,7 @@
 			// After all checks complete, check if isGood is still equal to 1
 			if(isGood != 0){
 				setTimeout(function(){stepOneContainer.style.display = "block";},600);
-				setTimeout(function(){ui.innerHTML += "<p style='color:red; font-weight:bold'>Error ( ºΔº ) - There are " + isGood + " invalid inputs. Please check your inputs</p>"; projLoader.style.opacity = "0";},1000);
+				setTimeout(function(){ui.innerHTML += "<p style='color:red; font-weight:bold'>Error (o_O) - There are " + isGood + " invalid inputs. Please check your inputs</p>"; projLoader.style.opacity = "0";},1000);
 				setTimeout(function(){projLoader.style.display="none";},1500);
 			}
 			else{
