--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 
 
 
-  <div class='columnContainer'>
+<div class='columnContainer'>
 	        <img src='https://static.wixstatic.com/media/af82a9_23f5875e0bee41ac8838322f544f5e74~mv2.png/v1/crop/x_0,y_2,w_814,h_641/fill/w_454,h_358,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Screenshot%202023-10-28%20154649.png'>
       <div>
 	      	<h2 style='margin-top:0'>Ride Engineering Competition</h2>
@@ -30,8 +30,11 @@
 			<p>Goal: To design, fabricate, and present a fully functional scale rollercoaster featuring multiple safety and controls elements which could thrill Starburst Candies.</p>
 	    		<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
 	   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> 
+	      		<p><button onclick='window.open("projects/rec-2024")'>View Project</button></p>
+	      		
       </div>
   </div>
+	
 
 <div class='columnContainer'>
 	        <img src='https://gunt.de/images/datasheet/675/HM-162-Experimental-flume-309x450mm-gunt-675-zeichnung.jpg'>
@@ -44,6 +47,19 @@
 	      		<p><b>Skills</b> - SolidWorks, Fluid Mechanics, Industry Research</p>
       </div>
   </div>
+
+		<div class='columnContainer'>
+			<img src='https://static.wixstatic.com/media/af82a9_23f5875e0bee41ac8838322f544f5e74~mv2.png/v1/crop/x_0,y_2,w_814,h_641/fill/w_454,h_358,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Screenshot%202023-10-28%20154649.png'>
+		      <div>
+			      	<h2 style='margin-top:0'>Shaft Design Software Project</h2>
+		          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter 2024</p>
+			     		<p>Role: <em>Programmer</em></p>
+					<p>Goal: Use JavaScript to design a program which could take user-provided input and output the minimum diameter of a machine shaft required to meet a specified factor of safety in given operating and loading conditions.</p>
+			    		<p>This project was completed as part of my <em>Design of Machine Elements</em> course at UC San Diego. It taught me valuable skills in machine design as well as performing algorithmic math in JavaScript.</p>
+			   		<p><b>Skills - </b> Math in JavaScript, Machine Design, Solid Mechanics, HTML</p> 
+			      		<p><button onclick='window.open("https://reuvenrey.github.io/me/programs/shaft-design-project.html")'>View Project</button></p>
+		      </div>
+  		</div>
 
 <div class='columnContainer'>
 	        <img src='https://pbs.twimg.com/media/EmfBgLqUYAAtEfx.jpg'>
