--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
   </div>
 
 		<div class='columnContainer'>
-			<img src='https://static.wixstatic.com/media/af82a9_23f5875e0bee41ac8838322f544f5e74~mv2.png/v1/crop/x_0,y_2,w_814,h_641/fill/w_454,h_358,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Screenshot%202023-10-28%20154649.png'>
+			<img src='https://d2vlcm61l7u1fs.cloudfront.net/media%2F7f9%2F7f94806f-0c5f-4a10-a841-ebfe45b878f2%2Fphp06nuzn.png'>
 		      <div>
 			      	<h2 style='margin-top:0'>Shaft Design Software Project</h2>
 		          	<p style='margin-top:-10px; margin-bottom:10px;'>Winter 2024</p>
