--- a/programs/shaft-design-project.html
+++ b/programs/shaft-design-project.html
@@ -73,6 +73,13 @@
 					The program I have designed will take a series of User-Provided inputs, including D/d and r/d, and will return the values for D and d based on the loading and desired factor of safety provided. After the initial calculations are performed, the user will be able to adjust their inputs and find the most desirable shaft diameters.
 				</div>
 			</div>
+			<br>
+			<div class='columnContainer'>
+				<img src='https://www.researchgate.net/publication/271960238/figure/fig2/AS:614283851345924@1523468091106/A-simple-pinion-shaft-with-different-meshes-applied-for-specific-tasks-during-a-design.png'>
+				<div>
+					This program can be used in the design of important machine components such as gear boxes, drive shafts, rotary systems, etc.
+				</div>
+			</div>
 		</div>
 
 <!-- INITIAL MENU -->
