--- a/projects/shaft-design-project.html
+++ b/projects/shaft-design-project.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<link rel="stylesheet" href="https://reuvenrey.github.io/me/files/styleSheet.css">
-    		<link rel="icon" type="image/x-icon" href="files/images/favicon.ico">
+    		<link rel="icon" type="image/x-icon" href="../files/images/favicon.ico">
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     		<title>Shaft Design Project | MAE 190 | Reuven Reyman</title>
 	</head>
@@ -121,7 +121,7 @@
 					</div>
 					<div>Minimum Factor of Safety</div>
 					<div>
-						<input type='number' placeholder='n' id='factorOfSafety'>
+						<input type='number' name='Factor of Safety' placeholder='n' id='factorOfSafety'>
 					</div>
 					<div>Reliability</div>
 					<div>
@@ -140,8 +140,13 @@
 				<div class='parameterContainer'>
 					<div>Material Choice</div>
 					<div>
-						<select id='materialChoice'>
-							<option value='steel'>Steel (Sy = 50kpsi, Sut = 75kpsi)</option>
+						<select id='materialChoice'> <!-- Value nomenclature: NAME - SY(KPSI),SY(MPA) - SUT(KPSI),SUT(MPA) -->
+							<option value='1015 HR Steel - 50,340 - 27.5,190'>1015 HR Steel (Su=50,Sy=27.5)</option>
+							<option value='1015 CD Steel - 56,390 - 47,320'>1015 CD Steel (Su=56,Sy=47)</option>
+							<option value='1018 HR Steel - 58,400 - 32,220'>1018 HR Steel (Su=58,Sy=32)</option>
+							<option value='1018 CD Steel - 64,440 - 54,370'>1018 CD Steel (Su=64,Sy=54)</option>
+							<option value='1020 HR Steel - 55,380 - 30,210'>1020 HR Steel (Su=55,Sy=30)</option>
+							<option value='1020 CD Steel - 68,470 - 57,390'>1020 CD Steel (Su=68,Sy=57)</option>
 						</select>
 					</div>
 					<div>Surface Finish</div>
@@ -182,23 +187,23 @@
 				<div class='parameterContainer'>
 					<div>Alternating Torque</div>
 					<div>
-						<input id='torqueA' type='number' placeholder='Ta'>
+						<input id='torqueA' name='Alternating Torque' type='number' placeholder='Ta'>
 					</div>
 					<div>Mean Torque</div>
 					<div>
-						<input id='torqueM' type='number' placeholder='Tm'>
+						<input id='torqueM' name='Mean Torque' type='number' placeholder='Tm'>
 					</div>
 					<div>Alternating Moment</div>
 					<div>
-						<input id='momentA' type='number' placeholder='Ma'>
+						<input id='momentA' name='Alternating Moment' type='number' placeholder='Ma'>
 					</div>
 					<div>Mean Moment</div>
 					<div>
-						<input id='momentM' type='number' placeholder='Mm'>
+						<input id='momentM' name='Mean Moment' type='number' placeholder='Mm'>
 					</div>
 					<div><p>Environmental Temperature<br><em style='color:orange'>Use RT for Room Temperature</em></p></div>
 					<div>
-						<input id='temp' placeholder='°F / °C'>
+						<input id='temp' name='Temperature' placeholder='°F / °C'>
 					</div>
 					<div>Calculation Speed</div>
 					<div>
