--- a/projects/shaft-design-project.html
+++ b/projects/shaft-design-project.html
@@ -166,12 +166,9 @@
 					<div>D / d Ratio</div>
 					<div>
 						<select id='Dd-ratio' onchange='console.log(this.value)'>
-							<option value='1.03'>1.03 (3%)</option>
-							<option value='1.05'>1.05 (5%)</option>
-							<option value='1.07'>1.07 (7%)</option>
 							<option value='1.1'>1.1 (10%)</option>
 							<option value='1.2'>1.2 (20%)</option>
-							<option value='1.5'>1.5 (50%)</option>
+							<option value='1.3'>1.3 (30%)</option>
 							<option value='2'>2 (200%)</option>
 						</select>
 					</div>
@@ -417,7 +414,7 @@
 			// (1) Input Tables from PDF given here: https://canvas.ucsd.edu/courses/51827
 				// Format: each unit is D/d,A,b
 				// Iterative search will use .split(",") and first look at D/d to find a match before then using values A and b
-				KtGuessTable = ["1.03,0.98061,-0.018381", "1.05,0.98137,-0.19653", "1.07,0.97527,-0.20958", "1.1,0.95120,-0.23757", "1.2,0.97098,-0.21796", "1.5,0.90836,-0.25759", "2,0.90879,-0.28598"];
+				KtGuessTable = ["1.1,0.95120,-0.23757", "1.2,0.97098,-0.21796", "1.3,0.90836,-0.25759", "2,0.90879,-0.28598"];
 				KtsGuessTable = [];
 			
 			// (2) Form Guesses for Kf using table
@@ -439,7 +436,7 @@
 							ui.innerHTML += "<p style='margin-left:40px;'>Correct Guess: "+tempGuess+"</p>";
 							console.log("End Kt guess while loop");
 						}else{
-							ui.innerHTML += "<p style='margin-left:40px;'>Current Guess: "+tempGuess+"</p>";
+							ui.innerHTML += "<p style='margin:0; margin-left:40px;'>Current Guess: "+tempGuess+"</p>";
 							iteration += 1;
 						}	
 					}
