--- a/projects/shaft-design-project.html
+++ b/projects/shaft-design-project.html
@@ -5,56 +5,12 @@
 		<link rel="stylesheet" href="https://reuvenrey.github.io/me/files/styleSheet.css">
     		<link rel="icon" type="image/x-icon" href="../files/images/favicon.ico">
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<link rel="stylesheet" href="https://reuvenrey.github.io/me/files/project-files/shaftDesignStyleSheet.css">
     		<title>Shaft Design Project | MAE 190 | Reuven Reyman</title>
 	</head>
 
 	<style>
-		#fullCont{background:white; transition:0.5s; color:black;}
-		#mainContainer h2{color:black;}
-
-		button{padding:10px; cursor:pointer; border: 1px solid black; border-radius:5px; transition:0.5s; min-width:200px;}
-		button:hover{background:dimgray; color:white;}
-
-		input, select{padding:10px; cursor:pointer; border: 1px solid black; border-radius:5px; transition:0.5s; min-width:100px; margin:15px;}
-
-		#projConsole{color:white; padding:15px; position:fixed; bottom:0; left:0; right:0; background:rgba(0,0,0,0.60); height:150px; overflow-y:scroll; border-top:5px solid black; z-index:900; transition:0.5s;}
-		#projConsole h3{color:white;}
-
-		#projLoader{	position:fixed; top:0;bottom:0;left:0;right:0;
-			   	background: linear-gradient(-45deg, midnightBlue,purple);
-				background-size: 400% 400%;
-				animation: gradient 5s ease infinite;
-				height: 100vh;
-			    	z-index:890;
-			    	display:flex; align-items:center; justify-content:center;
-			    	display:none;
-			   }
-		#projLoader div{padding:20px; text-align:center;}
-		#projLoader img{display:block; margin:auto; margin-bottom:10px; width:150px; height:150px;}
-		
-
-		.spacer{width:100%; height:2px;}
-
-		.fullContainer{background:white; color:black; animation:fade-in 0.5s;}
-		.fullContainer .container h1, .fullContainer .container h2, .fullContainer .container h3{color:black;}
-		.fullContainer .container a{color:blue;}
-
-
-		table {
-		  	font-family: arial, sans-serif;
-		  	border-collapse: collapse;
-		  	width: 100%;
-		}
-		
-		td, th {
-		 	border: 1px solid #dddddd;
-		  	text-align: left;
-		  	padding: 8px;
-		}
-			tr:nth-child(even) {
-		 	background-color: #dddddd;
-		}
-		table label{display:inline-block; margin-right:15px; text-align:left;}
 	</style>
 
 	<body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
@@ -147,6 +103,10 @@
 							<option value='1018 CD Steel - 64,440 - 54,370'>1018 CD Steel (Su=64,Sy=54)</option>
 							<option value='1020 HR Steel - 55,380 - 30,210'>1020 HR Steel (Su=55,Sy=30)</option>
 							<option value='1020 CD Steel - 68,470 - 57,390'>1020 CD Steel (Su=68,Sy=57)</option>
+							<option value='1030 HR Steel - 68,470 - 37.5,260'>1030 HR Steel (Su=68,Sy=37.5)</option>
+							<option value='1030 CD Steel - 76,520 - 64,440'>1030 CD Steel (Su=68,Sy=57)</option>
+							<option value='1060 HR Steel - 98,680 - 54,370'>1060 HR Steel (Su=98,Sy=54)</option>
+							<option value='1095 HR Steel - 120,830 - 66,460'>1060 HR Steel (Su=120,Sy=66)</option>
 						</select>
 					</div>
 					<div>Surface Finish</div>
