--- a/projects/shaft-design-project.html
+++ b/projects/shaft-design-project.html
@@ -379,7 +379,7 @@
 			// (1) Input Tables from PDF given here: https://canvas.ucsd.edu/courses/51827
 				// Format: each unit is D/d,A,b
 				// Iterative search will use .split(",") and first look at D/d to find a match before then using values A and b
-				const KtGuessTable = ["1.1,0.95120,-0.23757", "1.2,0.97098,-0.21796", "1.3,0.96011,-0.23117", ,"1.5,0.93836,-0.25759", "2,0.90879,-0.28598"];
+				const KtGuessTable = ["1.1,0.95120,-0.23757", "1.2,0.97098,-0.21796", "1.3,0.96011,-0.23117", "1.5,0.93836,-0.25759", "2,0.90879,-0.28598"];
 				const KtsGuessTable = ["1.1,0.89709,-0.135063", "1.2,0.83425,-0.21649", "1.3,0.84557,-0.228121", "1.5,0.85261,-0.23340", "2,0.86331,-0.23865"];
 			
 			// (2) Form Guesses for Kf using table
