--- a/projects/shaft-design-project.html
+++ b/projects/shaft-design-project.html
@@ -635,9 +635,9 @@
 			d_initial = guessDiameter(Kf,Kfs,fos,momentA,momentM,torqueA,torqueM,Se,Su,units);
 
 			if(units == "english"){
-				ui.innerHTML += "<p style='color:limegreen'>Diameter Guess: " + d_initial + " inches";
+				ui.innerHTML += "<p style='color:limegreen; font-weight:bold;'>( ˘▽˘)っ♨ Initial Diameter Guess: " + d_initial + " inches";
 			}else{
-				ui.innerHTML += "<p style='color:limegreen'>Diameter Guess: " + d_initial + " meters";
+				ui.innerHTML += "<p style='color:limegreen'>( ˘▽˘)っ♨ Initial Diameter Guess: " + d_initial + " meters";
 			}
 			
 			
