--- a/projects/shaft-design-project.html
+++ b/projects/shaft-design-project.html
@@ -737,6 +737,8 @@
 			finalContainerTable.innerHTML += "<tr><td>Trial " + projIterations + "</td><td>" + materialChoice + " (Su = " + Su + ", Sy = " + Sy + ")</td><td>" + d_guessed + " " + tunit$ + "</td><td>" + largeD + " " + tunit$ + "</td><td>" + fosCalculated + "</td><td>" + fos + "</td></tr>";
 			projLoader.style.display="none";
 			ui.style.height = "20vh";
+
+			alreadyExpanded = 0;
 			
 		}
 
