--- a/projects/shaft-design-project.html
+++ b/projects/shaft-design-project.html
@@ -43,7 +43,7 @@
 <!-- INITIAL MENU -->
 		<div class='fullContainer' id='initialMenuContainer'>
 			<div class='container'>
-				<button onclick='startCode()'>Run Program</button> | <a href='https://github.com/reuvenrey/me/blob/main/projects/shaft-design-project.html'>View Code</a> | <a>View Design Report (PDF)</a>
+				<button onclick='startCode()'>Run Program</button> | <a href='https://github.com/reuvenrey/me/blob/main/projects/shaft-design-project.html'>View Code</a> | <a href='https://reuvenrey.github.io/me/files/project-files/shaft-design-project-report.pdf'>View Design Report (PDF)</a>
 			</div>
 		</div>
 
