--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,8 @@
   </head>
   
   <style>
+	  button {padding:10px; color:white; background:none; border:2px solid white; border-radius:5px; font-size:15px; transition:0.5s; min-width:200px;}
+	  button:hover {background:darkcyan; cursor:pointer;}
   </style>
   
 <body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
@@ -22,15 +24,15 @@
 
 
 <div class='columnContainer'>
-	        <img src='https://static.wixstatic.com/media/af82a9_23f5875e0bee41ac8838322f544f5e74~mv2.png/v1/crop/x_0,y_2,w_814,h_641/fill/w_454,h_358,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/Screenshot%202023-10-28%20154649.png'>
+	        <img src='files/images/groupPhotoREC2.jpg'>
       <div>
 	      	<h2 style='margin-top:0'>Ride Engineering Competition</h2>
           	<p style='margin-top:-10px; margin-bottom:10px;'>Winter - Spring 2024</p>
-	     		<p>Role: <em>Mechanical Team Lead, Materials, Controls Design</em></p>
+	     		<p>Role: <em>Head of Mechanical Design</em></p>
 			<p>Goal: To design, fabricate, and present a fully functional scale rollercoaster featuring multiple safety and controls elements which could thrill Starburst Candies.</p>
-	    		<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
-	   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> 
-	      		<p><button onclick='window.open("projects/rec-2024")'>View Project</button></p>
+	    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
+	   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
+	      		<p><button onclick='window.open("projects/rec-2024", "_self")'>View Project</button></p>
 	      		
       </div>
   </div>
