--- a/projects/rec-2024.html
+++ b/projects/rec-2024.html
@@ -36,6 +36,9 @@
 	  h2{color:violet;}
 	  
 	  .spacer{width:90%; max-width:1100px; margin:auto; height:1px; background:#efefef; margin-top:15px; margin-bottom:15px;}
+
+	  a{text-decoration:underline;}
+	  a:hover{cursor:pointer;}
 	  
   </style>
   
@@ -77,6 +80,12 @@
 
 	<div class='container'>
 		<h1>Final Results</h1>
+		<p><a onclick='document.getElementById("iframeCont").style.display="block"'>View Design Review Slideshow</a></p>
+		<div id='iframeCont' class='container' style='display:none'>
+			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSDmajJUQe9o4xxsJ0Hsox1bUa9CfpqOoA8e4BDci6YhVTvgrnlqpfzOi7hhQUEdxEz-_AJFQ7jxRRF/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+			<p style='text-align:center'><a onclick='document.getElementById("iframeCont").style.display="none"'>Close Slides</a></p>
+		</div>
+		
 		Slides, picture and video, show scoring card!
 	</div>
 
