--- a/projects/rec-2024.html
+++ b/projects/rec-2024.html
@@ -49,7 +49,7 @@
 	</div>
 
 	<div class='titleBar'>
-		<p><h1>The 2024 Ride Engineering Competition</h1></p>
+		<p><h1 style='color:dimgray'>The 2024 Ride Engineering Competition</h1></p>
 		<p>The <a href='https://www.rideengineeringcompetition.org/'>Ride Engineering Competition</a> provides students with a hands-on opportunity to apply their engineering knowledge and skills in a real-world context. It also fosters collaboration, creativity, and innovation among participants, while offering valuable networking opportunities with industry professionals in the amusement park and entertainment industries.</p>
 	</div>
 
@@ -80,7 +80,7 @@
 
 	<div class='container'>
 		<h1>Final Results</h1>
-		<p><a onclick='document.getElementById("iframeCont").style.display="block"'>View Design Review Slideshow</a></p>
+		<p><a onclick='document.getElementById("iframeCont").style.display="block"'>View Design Review Slideshow</a> | <a href='https://youtu.be/EnLdT1uTCjo'>Watch POV video</a></p>
 		<div id='iframeCont' class='container' style='display:none'>
 			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSDmajJUQe9o4xxsJ0Hsox1bUa9CfpqOoA8e4BDci6YhVTvgrnlqpfzOi7hhQUEdxEz-_AJFQ7jxRRF/embed?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="500px" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 			<p style='text-align:center'><a onclick='document.getElementById("iframeCont").style.display="none"'>Close Slides</a></p>
