--- a/projects/rec-2024.html
+++ b/projects/rec-2024.html
@@ -49,12 +49,11 @@
 	</div>
 
 	<div class='titleBar'>
-		<p><h1 style='color:dimgray'>The 2024 Ride Engineering Competition</h1></p>
+		<p><h1 style='color:#efefef'>The 2024 Ride Engineering Competition</h1></p>
 		<p>The <a href='https://www.rideengineeringcompetition.org/'>Ride Engineering Competition</a> provides students with a hands-on opportunity to apply their engineering knowledge and skills in a real-world context. It also fosters collaboration, creativity, and innovation among participants, while offering valuable networking opportunities with industry professionals in the amusement park and entertainment industries.</p>
 	</div>
 
 	<div class='container'>
-		<h1>Our Submission: <em>Pixie Party</em></h1>
 		<div class='columnContainer'>
 			<img src='https://reuvenrey.github.io/me/files/images/pixiePartyLogo.png' style='object-fit:contain'>
 			<div>
