--- a/projects.html
+++ b/projects.html
@@ -39,14 +39,15 @@
 	
 
 <div class='columnContainer'>
-	        <img src='https://gunt.de/images/datasheet/675/HM-162-Experimental-flume-309x450mm-gunt-675-zeichnung.jpg'>
+	        <img src='files/images/flume-inlet-image.jpg'>
       <div>
-	      	<h2 style='margin-top:0'>Expiramental Flume</h2>
-          	<p style='margin-top:-10px; margin-bottom:10px;'>2023 - 2024</p>
-			<p>Role: <em>Flow Inlet Design</em></p>
-	      		<p>Goal: Design an expiramental flume to use for testing of riverbed measuring tools</p>
-	      		<p>For this project, I focused on designing a component of the flume to distribute even and non-turbulent water flow to the expiramental section of the flume.</p>
-	      		<p><b>Skills</b> - SolidWorks, Fluid Mechanics, Industry Research</p>
+	      	<h2 style='margin-top:0'>River Simulation Flume</h2>
+          	<p style='margin-top:-10px; margin-bottom:10px;'>2023 - 2025</p>
+			<p>Role: <em>Flow Inlet Engineer</em></p>
+			<p>Goal: Design and construct a flume to simulate the flow of a river to test a PHD research theory on flow control</p>
+	    		<!--<p>As Mechanical Lead, I was responsible for the main design of the ride, including tracks, supports, ride vehicle, and safety systems. I also helped to design the controls system for the ride and handled inventory and tracking of materials used throughout the project.</p>
+	   		<p><b>Skills - </b> SolidWorks, Mechanical Design, Physics, 3D Printing, Laser Cutting</p> -->
+	      		<p><button onclick='window.open("projects/flume-project", "_self")'>View Project</button></p>
       </div>
   </div>
 
