--- a/projects/rec-2024.html
+++ b/projects/rec-2024.html
@@ -19,7 +19,7 @@
   
   <head>
     <link rel="stylesheet" href="https://reuvenrey.github.io/me/files/styleSheet.css">
-    <link rel="icon" type="image/x-icon" href="files/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://reuvenrey.github.io/me/files/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixie Party! | Ride Engineering Competition 2024 | Reuven Reyman</title>
   </head>
