--- a/projects/flume-project.html
+++ b/projects/flume-project.html
@@ -1,1 +1,48 @@
+<!-- TEMPLATE PAGE: 
+	SPACING: TABS 8 NOWRAP
+	REMEMBER TO ADD PAGE TITLE!
 
+	(C) Reuven Reyman
+-->
+
+<!DOCTYPE html>
+<html>
+  
+  <head>
+    <link rel="stylesheet" href="https://reuvenrey.github.io/me/files/styleSheet.css">
+    <link rel="icon" type="image/x-icon" href="https://reuvenrey.github.io/me/files/images/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PAGE_TITLE | Reuven Reyman</title>
+  </head>
+	
+  <style>
+  </style>
+  
+<body onload='finishLoad()'><div id='loader'></div><div id='header'></div>
+
+	<div class='banner'>
+		<img src='https://reuvenrey.github.io/me/files/images/groupPhotoREC1.jpg'>
+	</div>
+
+	<div class='titleBar'>
+		<h2>Page_Title</h2>
+	</div>
+	<div class='subtitleBar'>
+		<p>Subtitle_of_page</p>
+	</div>
+
+	<div class='container'>
+		
+	</div>
+
+	<div class='spacer'></div>
+
+
+
+  
+<div id='footer'></div> </body> <!-- END OF BODY -->
+
+<script type='text/javascript' src='https://reuvenrey.github.io/me/files/headerScript.js'></script>
+<script>runHeader();</script>
+	
+</html>
