--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div style='margin-top:0px; width:full; background-image: linear-gradient(180deg, blue, purple); background-attachment: fixed;'>
 <br>
   <div class='columnContainer'>
-      <img src='https://yt3.googleusercontent.com/ytc/AOPolaS7pVowyT8MlEB1s-pJaiDaJJYuyIrdg4ZpoR1dWwY=s900-c-k-c0x00ffffff-no-rj'>
+      <img src='https://reuvenrey.github.io/me/files/images/meProfile.jpg'>
       <div>
 	<h1 id='scrollText'></h1>
 	<br>
