--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
 
 <div class='container' style='text-align:center'>
-	 <div class='fullContainer' style='text-align:center'>
+	 <div class='container' style='text-align:center'>
 	  <div class='portholeContainer'>
 		  <div onclick='window.open("mailto:reuvenreyman@gmail.com")'>
 			  <img src='https://www.nidirect.gov.uk/sites/default/files/styles/nigov_full_620_x1/public/images/email_logo.jpg?itok=ifUhNgCT'>
@@ -30,7 +30,7 @@
 			  <p>reuvenreyman@gmail.com</p>
 		  </div>
 		   <div onclick='window.open("https://www.linkedin.com/in/reuven-reyman-6469b5252/","_self")'>
-			  <img src='https://media.licdn.com/dms/image/D4D35AQEKfVeH7vKkxA/profile-framedphoto-shrink_400_400/0/1700004109591?e=1702328400&v=beta&t=oqLO4tkUWqe9sd565_QHNpa2wI1jKp4fBI-Ap3dVsSs'>
+			  <img src='https://reuvenrey.github.io/me/files/images/meProfile.jpg'>
 			  <h3>LinkedIn</h3>
 		  </div>
 	  </div>
